examples/test/testpolicy3925.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3925
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key24: value22
      key0: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value20
          key1: value12
      podSelector:
        matchLabels:
          key6: value42
